--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,32 +7,57 @@
   scrollbar-color: #d1d5db white;
 }
 
+.dark {
+  scrollbar-color: #6b6b6b #2c2c2c;
+}
+
 @layer base {
   :root {
-    --background: theme("colors.white");
-    --background-100: theme("colors.neutral.100");
-    --background-200: theme("colors.neutral.200");
-    --background-hover: theme("colors.neutral.100");
-    --main: theme("colors.neutral.800");
-    --sub: theme("colors.neutral.500");
-    --subtle: theme("colors.neutral.400");
-    --border: theme("colors.neutral.200");
-    --placeholder: theme("colors.neutral.400");
-    --primary: #2761ff;
-    --primary-dark: #0a4bff;
-    --ring: #84a5ff;
-    --error: theme("colors.red.500");
-    --error-dark: theme("colors.red.600");
-    --error-lighter: theme("colors.red.100");
-    --secondary: theme("colors.neutral.100");
-    --secondary-dark: theme("colors.neutral.200");
-    --ring-error: theme("colors.red.300");
+    --color-background: theme("colors.white");
+    --color-background-100: theme("colors.neutral.100");
+    --color-background-200: theme("colors.neutral.200");
+    --color-background-hover: theme("colors.neutral.100");
+    --color-main: theme("colors.neutral.800");
+    --color-sub: theme("colors.neutral.500");
+    --color-subtle: theme("colors.neutral.400");
+    --color-border: theme("colors.neutral.200");
+    --color-placeholder: theme("colors.neutral.400");
+    --color-primary: theme("colors.blue.500");
+    --color-primary-dark: theme("colors.blue.600");
+    --color-primary-lighter: theme("colors.blue.50");
+    --color-primary-lighter-hover: theme("colors.blue.100");
+    --color-error: theme("colors.red.500");
+    --color-error-dark: theme("colors.red.600");
+    --color-error-lighter: theme("colors.red.100");
+    --color-secondary: theme("colors.neutral.100");
+    --color-secondary-dark: theme("colors.neutral.200");
+    --color-ring: theme("colors.blue.300");
+    --color-ring-error: theme("colors.red.300");
+
+    --spacing-page: 12px;
+  }
+
+  .dark {
+    --color-background: theme("colors.neutral.800");
+    --color-background-100: theme("colors.neutral.900");
+    --color-background-200: theme("colors.neutral.700");
+    --color-background-hover: theme("colors.neutral.700");
+    --color-main: theme("colors.neutral.100");
+    --color-sub: theme("colors.neutral.400");
+    --color-subtle: theme("colors.neutral.400");
+    --color-border: theme("colors.neutral.600");
+    --color-placeholder: theme("colors.neutral.400");
+    --color-error: theme("colors.red.300");
+    --color-secondary: theme("colors.neutral.700");
+    --color-secondary-dark: theme("colors.neutral.600");
+    --color-ring: theme("colors.blue.800");
+    --color-ring-error: theme("colors.red.800");
   }
 }
 
 @layer base {
   body {
-    @apply text-main bg-background;
+    @apply bg-background text-main;
   }
 
   button,
@@ -41,6 +66,18 @@
   }
 
   .focus-ring {
-    @apply ring-ring ring-offset-background outline-none ring-2 ring-offset-2;
+    @apply outline-none ring-2 ring-ring ring-offset-2 ring-offset-background;
+  }
+
+  .focus-input-ring {
+    @apply border border-primary outline-none ring-[3px] ring-primary-lighter ring-offset-0;
+  }
+
+  .focus-input-ring-error {
+    @apply border border-error outline-none ring-[3px] ring-error-lighter ring-offset-0;
+  }
+
+  .disable-focus-ring {
+    @apply focus-visible:ring-0;
   }
 }
