--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@
 @layer base {
   :root {
     --color-background: theme("colors.white");
+    --color-background-50: theme("colors.neutral.50");
     --color-background-100: theme("colors.neutral.100");
     --color-background-200: theme("colors.neutral.200");
     --color-background-hover: theme("colors.neutral.100");
